--- a/react-app/src/components/styles/navbar.css
+++ b/react-app/src/components/styles/navbar.css
@@ -94,7 +94,7 @@ font-family: 'Sofia', cursive; */
 }
 
 .nav-bar-buttons {
-    margin: 0 .5rem 0 .5rem;
+    margin: 0 5rem 0 5rem;
     border-radius: 28px;
     border: 2px solid #6f1a6f;
     background-color: #6f1a6f;
